<resources>
    <string name="app_name">Elani</string>
    <string name="action_settings">Settings</string>
    <string name="random">This is just random text to fill out this section</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_login">Login</string>

    <string name="title_activity_home">Home</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_toolbar_things">ToolbarThings</string>
    <string name="vegetables">Vegetables</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title_activity_items_details">ItemsDetails</string>
    <string name="descr">Wonderfully sweet with firm and creamy flesh, bananas come prepackaged in their own yellow jackets and are available for harvest throughout the year.  The banana plant grows 10 to 26 feet and belongs to the Musaceae family of plants along with plantains.</string>
    <string name="title_activity_cartactivity">Cartactivity</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="request_pin" >Request pin</string>
    <string name="title_activity_categories">Categories</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
